# Simple_webserver_in_C

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: misra_ci.yml
scripts/: generate_report.py  local_test.sh  run_analysis.py
src/: http_parser.c  http_server.c  logger.c  main.c  router.c
